fixed contrast

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 $primary-color: white;
-$primary-background: rgb(207, 133, 209);
+// $primary-background: rgb(207, 133, 209);
+$primary-background: rgb(183, 115, 185);
 $secondary-background: rgb(31, 31, 78);
 $border-radius: 10px;
 $box-shadow: 0px 3px 11px -3px rgba(0,0,0,0.45);
